<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sand_light"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Логотип -->
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="start"
            app:srcCompat="@drawable/ic_launcher_crispy_foreground" />


        <!-- Заголовок -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/lato_semibold"
            android:paddingBottom="30dp"
            android:text="@string/registration"
            android:textColor="@color/brown_light"
            android:textSize="25sp" />

        <!-- Введите логин -->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextUsername"
            style="@style/CustomEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bt_text"
            android:hint="Введите логин"
            android:inputType="text"
            android:padding="12dp"
            android:paddingStart="5dp"
            android:textColor="@color/black"
            android:fontFamily="@font/lato_semibold"
            android:textSize="16sp" />

        <!-- Введите имя -->
        <EditText
            android:id="@+id/editTextName"
            style="@style/CustomEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bt_text"
            android:hint="Введите имя"
            android:inputType="text"
            android:padding="12dp"
            android:paddingStart="5dp"
            android:fontFamily="@font/lato_semibold"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Введите пароль -->
        <EditText
            android:id="@+id/editTextPassword"
            style="@style/CustomEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bt_text"
            android:drawableEnd="@drawable/eye_pass_show"
            android:hint="Введите пароль"
            android:inputType="textPassword"
            android:padding="12dp"
            android:paddingStart="5dp"
            android:textColor="@color/black"
            android:fontFamily="@font/lato_semibold"
            android:textSize="16sp" />

        <!-- Повторно введите пароль -->
        <EditText
            android:id="@+id/editTextRepeatPassword"
            style="@style/CustomEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bt_text"
            android:drawableEnd="@drawable/eye_pass_show"
            android:hint="Повторно введите пароль"
            android:inputType="textPassword"
            android:padding="12dp"
            android:paddingStart="5dp"
            android:fontFamily="@font/lato_semibold"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <!-- Контейнер для текста и изображения -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">


        </FrameLayout>

    </LinearLayout>

    <!-- кнопка зарегистрироваться  -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/button_light_brown"
        android:padding="12dp"
        android:layout_marginBottom="-10dp"
        android:stateListAnimator="@null"
        android:text="@string/reg_button"
        android:textAllCaps="false"
        android:textColor="@color/sand_light"
        android:textSize="18sp"
        android:fontFamily="@font/inter_medium"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Изображение -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bottom_aisberg" />

    <!-- Ссылка на вход -->
    <LinearLayout
        android:id="@+id/create_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_medium"
            android:text="@string/text_already"
            android:textColor="@color/sand_light"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/lato_medium"
            android:onClick="onLoginClick"
            android:text="@string/enter_move"
            android:textColor="@color/dark_dark_blue"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>