<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sand_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".view.activity.ProfileActivity">

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/inter_regular"
            android:text="Романова Мария"
            android:textColor="@color/brown"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/profile_ch_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <ImageButton
                android:id="@+id/buttonSettings"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/ic_edit"
                android:backgroundTint="@color/brown"
                android:contentDescription="Edit" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redact_name"
                android:textColor="@color/brown"
                android:textSize="18sp" />
        </LinearLayout>
            <TextView
                android:id="@+id/profile_password"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="Сменить пароль"
                android:textColor="@color/brown"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_regular"
                android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/button_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="320dp">

            <ImageButton
                android:id="@+id/buttonlogout"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/ic_exit"
                android:backgroundTint="@color/scarlet"
                android:contentDescription="Edit" />

            <TextView
                android:id="@+id/text_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:textColor="@color/scarlet"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/button_delete_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <ImageButton
                android:id="@+id/img_delete_account"
                android:layout_width="18dp"
                android:layout_height="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/delete_ic"
                android:backgroundTint="@color/scarlet"
                android:contentDescription="Edit" />

            <TextView
                android:id="@+id/text_delete_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/del_is_correct"
                android:textColor="@color/scarlet"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/brown_light"
        app:itemActiveIndicatorStyle="@color/brown_light"
        app:itemIconSize="33dp"
        app:itemIconTint="@drawable/selector_bottom_nav"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>